--- a/Bridge.Serverless/src/Bridge.Serverless/appsettings.json
+++ b/Bridge.Serverless/src/Bridge.Serverless/appsettings.json
@@ -3,5 +3,18 @@
     "LogLevel": {
       "Default": "Information"
     }
+  },
+  "AppSettings": {
+    "ItemConfigurations": {
+
+    },
+    "RoomConfigurations": {
+
+    },
+    "PasteConfigurations": {
+
+    },
+    "FrontendUrl": "https://bridge.cycastic.net",
+    "AllowedOrigins": "*"
   }
 }
